<resources>
    <string name="app_name">Student Notes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_student_weekly_schedule">Student Weekly Schedule</string>
    <string name="student_weekly_schedule">Student Weekly Schedule</string>
    <string name="empty">It\'s a bit lonely here...</string>
    <string name="empty_instruction">Get started by adding a Course</string>
    <string name="empty_shelves">empty shelves</string>
    <string name="courseName">Course Name</string>
    <string name="courseTime">editCourseActivity time</string>
    <string name="courseDays">Sunday \nMonday</string>
    <string name="title_activity_crudcourse">Course</string>
    <string name="pick_time">Pick time</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_start_time">Pick Start Time</string>
    <string name="pick_end_date">Pick End Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Time</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="courseDate">Date</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="error_field_required">This field is required :)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
